# movies-python-django

./: .gitignore  Dockerfile  api.http  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.docker/: start-app.sh
src/_seedworker/application/: dto.py  use_cases.py
src/_seedworker/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/_seedworker/tests/domain/: test_unit_validators.py  test_unit_value_objects.py
src/_seedworker/tests/integration/domain/: test_init_validators.py
src/_seedworker/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/_seedworker/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_value_objects.py
src/category/application/: use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/domain/: test_int_entities.py
src/category/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/category/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py
src/category/tests/unit/infra/: test_unit_repositories.py
src/core/_seedworker/application/: dto.py
src/core/_seedworker/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
src/core/_seedworker/tests/integration/domain/: test_init_validators.py
src/core/_seedworker/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/core/_seedworker/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/core/category/application/: use_cases.py
src/core/category/domain/: entities.py  repositories.py  validators.py
src/core/category/infra/django/: api.py  mappers.py  models.py  repositories.py  urls.py
src/core/category/infra/django/migrations/: 0001_initial.py
src/core/category/infra/in_memory/: repositories.py
src/core/category/tests/integration/domain/: test_int_entities.py
src/core/category/tests/integration/infra/django_app/: test_int_mappers.py  test_int_models.py  test_int_respositories.py
src/core/category/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/core/category/tests/unit/domain/: test_unit_entities.py
src/core/category/tests/unit/infra/: test_unit_repositories.py
src/django_app/: container.py  manage.py  settings.py  urls.py
src/tests/unit/domain/: test_unit_entities.py
uml/usecases/: category.usecase.wsd
(+1 files in other folders)
