[project]
name = ""
version = ""
description = ""
authors = [
    {name = "João Otávio", email = "joaotavioos@outlook.com"},
]
dependencies = []
requires-python = ">=3.10.2"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.15.2",
    "autopep8>=1.7.0",
]
