[project]
name = ""
version = ""
description = ""
authors = [
    {name = "João Otávio", email = "joaotavioos@outlook.com"},
]
dependencies = [
    "djangorestframework>=3.13.1",
    "django>=4.1.1",
    "django-extensions>=3.2.1",
    "dependency-injector>=4.40.0",
]
requires-python = ">=3.10.2"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.15.2",
    "autopep8>=1.7.0",
    "pytest>=7.1.3",
    "pytest-cov>=3.0.0",
    "pytest-django>=4.5.2",
    "model-bakery>=1.7.0",
]

[tool.pdm.scripts]
manage = "python ./src/django_app/manage.py"
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
runserver = "pdm run manage runserver 0.0.0.0:8000"
test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"

# [tool.pytest.ini_options]
# filterwarnings = [
#  "ignore::django.utils.deprecation.RemovedInDjango50Warning"
# ]